tests/error/errors_on_usage/else_not_defined.py
from tests.util import compile_guppy


@compile_guppy
def foo(x: bool) -> int:
    if x:
        y = 1
    else:
        z = 2
    return z
