tests/error/errors_on_usage/else_not_defined.err
Error: Variable not defined (at $FILE:10:11)
   | 
 8 |     else:
 9 |         z = 2
10 |     return z
   |            ^ `z` might be undefined ...
   | 
 6 |     if x:
   |        - ... if this expression is `True`

Guppy compilation failed due to 1 previous error
